Brought in cards, figured out how to handle overflow scrolling on fixed divs

--- a/src/App/App.css
+++ b/src/App/App.css
@@ -27,21 +27,29 @@ body {
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+  margin-bottom: 5px;
 }
 
 .App-address-list {
   min-height: 55vh;
+  max-height: 55vh;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
+  /* flex-direction: row;
   align-items: center;
+  flex-wrap: wrap; */
+  overflow: scroll;
+  margin-bottom: 5px;
 }
 
 .App-comment-list {
   background-color: rgb(110, 8, 110);
   min-height: 30vh;
+  max-height: 30vh;
   display: flex;
   flex-direction: column;
   align-items: center;
+  overflow: scroll;
 }
 
 .App-link {
